--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,60 @@
 * {
-  box-sizing: border-box;
-}
-
-body {
   margin: 0;
-  font-family: system-ui, sans-serif;
-  color: black;
+  padding: 0;
+}
+body {
+  background-color: pink;
+}
+.cake {
+  margin: 15px;
+  border: 1px solid black;
+  border-radius: 10px;
+  box-shadow: 10px 10px black;
+  background-color: black;
+  height: 200px;
+  width: 275px;
+  transition: ease all 0.4s;
+  overflow: hidden;
+}
+.cake .cake-img {
+  height: 150px;
+  background: url('https://raw.githubusercontent.com/filippella/Dagger-Rx-Database-MVP/master/cakes/lemoncheese_cake.jpg'),
+    linear-gradient(rgba(255, 0, 0, 0), rgba(0, 0, 0, 0.562));
+
+  background-blend-mode: multiply;
+  background-position: center;
+  background-size: cover;
+}
+.cake .cake-data {
   background-color: white;
 }
-
-nav {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding: 0.5rem;
-  gap: 0.5rem;
-  border-bottom: solid 1px #aaa;
-  background-color: #eee;
+.cake input {
+  margin-top: 1px;
+  display: inline;
+  height: 40px;
+  border: 0;
+  background: transparent;
+  padding-left: 2px;
+  margin-bottom: 10px;
 }
-
-nav a {
-  display: inline-block;
-  min-width: 9rem;
-  padding: 0.5rem;
-  border-radius: 0.2rem;
-  border: solid 1px #aaa;
-  text-align: center;
-  text-decoration: none;
-  color: #555;
+.cake .name {
+  padding-left: 3px;
+  width: 210px;
+  font-size: 20px;
 }
-
-nav a[aria-current='page'] {
-  color: #000;
-  background-color: #d4d4d4;
+.cake .price {
+  font-size: 15px;
+  width: 45px;
 }
-
-main {
-  padding: 1rem;
+.cake input:focus {
+  border: 0;
+  outline: 0;
 }
-
-h1 {
-  font-weight: bold;
-  font-size: 1.5rem;
+.cake:hover {
+  box-shadow: 6px 6px black;
+}
+.cake-container {
+  display: grid;
+  /* grid-template-columns: 1fr 1fr 1fr; */
+  grid-auto-flow: column;
 }
