--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@ body {
   background-color: pink;
 }
 .cake {
-  margin: 15px;
   border: 1px solid black;
   border-radius: 10px;
   box-shadow: 10px 10px black;
@@ -54,7 +53,9 @@ body {
   box-shadow: 6px 6px black;
 }
 .cake-container {
-  display: grid;
-  /* grid-template-columns: 1fr 1fr 1fr; */
-  grid-auto-flow: column;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-flow: wrap;
+  padding: 10px;
 }
