--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  background-color: pink;
+  background: url();
 }
 .cake {
   border: 1px solid black;
@@ -17,8 +17,8 @@ body {
 }
 .cake .cake-img {
   height: 150px;
- 
- background:    linear-gradient(rgba(255, 0, 0, 0), rgba(0, 0, 0, 0.562));
+
+  background: linear-gradient(rgba(255, 0, 0, 0), rgba(0, 0, 0, 0.562));
 
   background-blend-mode: multiply;
   background-position: center;
@@ -59,7 +59,7 @@ body {
   flex-flow: wrap;
   /* padding: 10px; */
 }
-.cake-holder{
+.cake-holder {
   display: flex;
   justify-content: center;
   gap: 20px;
